# dEAduction

./: .flake8  .gitignore  .mailmap  CONTRIBUTING.md  CONTRIBUTING_V2.md  CONTRIBUTING_labels.md  CONTRIBUTING_outline.md  MANIFEST.in  README.md  build_package.py  deaduction_install.sh  envconfig  envconfig_user  generate_manifest.sh  install_mathlib.sh  pyproject.toml  requirements.txt  requirements_qtrio.txt  setup.cfg  shell.py
.github/ISSUE_TEMPLATE/: bug-or-problem-report.md  discussion--question.md  new-feature--enhancement-or-refactoring-suggestion.md
bugs/: bug_FailedRequestError.txt  bug_action_not_understood.txt  bug_install.txt  bug_proof_state.txt  bug_proof_state2.txt  bug_proofstate_3  bug_server.txt  bug_servers3.txt  essai
debian/: README.Debian  changelog  control  copyright  deaduction.lintian-overrides  rules
docs/: Enonces_complets_theorie_des_ensembles  Liste_exos_sup.rtf  flow.txt  modelisation.uml
snippets/QFont_snippets/: qfont_snippets.py
snippets/QListView/: html_list_view.py  list_view.py
snippets/action_decorator/: __main__.py  actiondef.py  call_action.py  test.py
snippets/change_interface_with_buttons/: __main__.py
snippets/choose_course_exercise_widget/: __main__.py  mwe.py
snippets/connect_signal_to_signal/: __main__.py
snippets/context_menu_on_list/: Notes.md  __main__.py
snippets/context_menus/: on_MathObjectWidget.py
snippets/contextual_menu_on_list/: __main__.py
snippets/coursedata/: course.py  exercise.py  init_course.py  parser_course.py  test_init_course.py
snippets/dialogue_box/: dialog_button.py
snippets/display_proof_tree/: display_proof_tree.py
snippets/dlfile_test/: __main__.py
snippets/dummy_interface/: __main__.py
snippets/freeze_unfreeze_interface/: __main__.py  with_loop.py
snippets/gettext/: __main__.py
snippets/hashlist_test/: __main__.py
snippets/init_exercises/: course.py  exercise.py  init_course.py
snippets/launch_dialogs/: __main__.py
snippets/launch_sequence/: __main__.py
snippets/lean_python/: start.sh
snippets/list_selected_indicators/: __main__.py
snippets/logger_qtextedit/: __main__.py
snippets/logging/: __main__.py  ansiterm.py
snippets/mathjax/: __main__.py  mathjax-config.js  mathjax_test.html
snippets/mathjax_node/: mathjax_node_test.py
snippets/mathobj/: MathObject.py  PropObj.py  give_name.py  latex_format_data.py  lean_analysis_with_type.py  proof_state.py
snippets/matplotlib-label/: __main__.py
snippets/menubar/: __main__.py
snippets/ordered_buttons/: __main__.py  buttons_config.py
snippets/package_install_test/: __main__.py
snippets/pre_processing/: __main__.py
snippets/pspo_widget/: __main__.py
snippets/qdialog_open_finished/: __main__.py
snippets/qt_server/: __main__.py  leanpkg.toml
snippets/server/: ServerInterface.py  essai_server.py
snippets/setData_example/: __main__.py
snippets/signal_tree_widget/: __main__.py
snippets/status_bar/: status_bar.py
snippets/test_fontes/: __init__.py
snippets/tree_in_qt/: __main__.py  statements_tree_classes.py
snippets/trio_lean_qt/: __main__.py
snippets/trio_qt/: __main__.py
snippets/virtualfile/: __main__.py
snippets/wizard_launch_exercise/: __main__.py
src/deaduction/: __init__.py  leanpkg.path  leanpkg.toml
tests/: conftest.py
tests/actions/: old_test_proofs.py  test.py  test2.py  test_actions.py  test_logic.py
tests/autotest_buttons/: test_forall_ineq.lean  test_logic_buttons.lean  test_magic_buttons.lean  test_proof_buttons.lean  test_statements.lean
tests/autotest_exercises/: test_magic_buttons.lean  test_proof_buttons.lean  test_statements.lean
tests/coursedata/: test_coursedata.py
tests/datacourse/: test_course.lean
tests/lean_files/: exercises_theorie_des_ensembles.lean  short_course.lean  test_button_avec.lean  test_button_proof.lean
tests/lean_files_for_pytest/: exercises_for_tests.lean  exercises_for_tests.pkl  (+1 more)
tools/: commit-msg  find_replace.py
(+1369 files in other folders)
